# cardano-dex-backend

./: .gitignore  Badger  Badger-Keygen  DOCKER_COMPOSE.md  Dockerfile  README.md  badger-keygen.Dockerfile  cabal.project  docker-compose.yaml  secret
.github/workflow/: docker.yml
.github/workflows/: docker-image.yml  teddy-badger-build.yml  teddy-badger-keygen-image.yml  teddy-badger-keygen-linux-amd64.yml  teddy-badger-keygen-linux-arm64.yml  teddy-badger-linux-amd64.yml  teddy-badger-linux-arm64.yml
amm-executor/: amm-executor.cabal
amm-executor/resources/: config.dhall  secret.json
amm-executor/src/Spectrum/Executor/OrdersExecutor/: Service.hs
badger-volume/: config.dhall
cardano/preview/: config.json
docker/: .env  docker-compose.yaml
key-gen/: key-gen.cabal
key-gen/app/: Main.hs
ledger-sync/: ledger-sync.cabal
nix/pkgs/haskell/: haskell.nix
spectrum-prelude/: spectrum-prelude.cabal
