cabal-version:      2.4
name:               key-gen
version:            0.1.0.0

author:             TeddySwap
maintainer:         TeddySwap

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

executable key-gen
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    default-extensions: TypeApplications

    build-depends:    base >= 4.9 && < 5,
                      wallet-api,
                      cardano-api,
                      text